--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 </head>
 
 <body>
-    <div class="title" id="title"></div>
-    <div class="question" id="question"></div>
+    <div id="headerContainer" class=" headerContainer">
+        <img id="image" class="image" src="" alt="" srcset="">
+        <div>
+            <div class="title" id="title"></div>
+            <div class="question" id="question"></div>
+        </div>
+    </div>
 
     <textarea class="textArea" name="" id="textArea" cols="30" rows="10"></textarea>
 
-    <div id="celebrationContainer" class="celebrationContainer" >
-        <div id="thankYou" class="thankYou"></div>
+    <div id="celebrationContainer" class="celebrationContainer">
         <img src="" class="celebration" id="celebration">
+        <div id="thankYou" class="thankYou"></div>
     </div>
     <div class="btnContainer">
         <div id="submit" class="submit btn"></div>
